# delta_live_table_demo

./: .gitignore  README.md  main.py  pyproject.toml
PopulateTable/: pyproject.toml
PopulateTable/src/populatetable/: CryptoPricing.py  __init__.py
PopulateTable/test/: GetQuote_test.py
