[project]
name = "populatetable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Costanzo", email = "michael.costanzo@froedtert.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.27",
    "polars>=1.33.1",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
